charts/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vite-gke
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: vite
  template:
    metadata:
      labels:
        app: vite
    spec:
      containers:
      - name: vite-app
        # Replace $LOCATION with your Artifact Registry location (e.g., us-west1).
        # Replace $PROJECT_ID with your project ID.
        image: us-central1-docker.pkg.dev/<PROJECT_ID>/vite-repo/vite-gke:latest
        # This app listens on port 80 for web traffic by default.
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "1Gi"
            cpu: "500m"
            ephemeral-storage: "1Gi"
          limits:
            memory: "1Gi"
            cpu: "500m"
            ephemeral-storage: "1Gi"
